--- a/scripts/R31_new_mice.Rmd
+++ b/scripts/R31_new_mice.Rmd
@@ -10,6 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r}
 library(tidyverse)
+library(janitor)
 ```
 
 ```{r}
@@ -169,5 +170,121 @@ newest <- readxl::read_excel('../data/Sucrose_All Experiments Consolidated .xlsx
   select(Experiment:Mouse_identifier, CFUs_per_GramStool, Log_CFUs_per_GramStool)
 
 newest %>% count(Experiment, Treatment)
+```
+
+# room, only replated RB08 including the sucrose and control group as they were also from RB08 
+
+```{r}
+experiment_data <- read_csv('../data/7_9_25Biapenem Rebuttal Experiment_updated.csv') %>% 
+  filter(Group == 'RB08'| Group == 'sucrose' | Group == 'control') %>% 
+  mutate(CFUs_per_GramStool = (((((Colonies_counted*(100/Plated_volume_ul))/100)/(10^Dilution_factor) )*1000)/Stool_weight_mg)+1)  %>%
+  clean_names() %>%
+  mutate(logCFU = log10(cf_us_per_gram_stool)) 
+```
+```{r}
+processed_data <- experiment_data %>%
+  # The value '0' can't be plotted on a log scale. We'll replace it with a small number (e.g., 1)
+  # to include it in the plot, as is common practice.
+  mutate(cf_us_per_gram_stool = if_else(cf_us_per_gram_stool == 0, 1, cf_us_per_gram_stool)) %>%
+  # Create separate columns for 'antibiotic_treatment' and 'diet_treatment' from the 'group' column.
+  mutate(
+    antibiotic_treatment = case_when(
+      str_detect(treatment, "Biapenem") ~ "biapenem",
+      str_detect(treatment, "PBS") ~ "PBS",
+      TRUE ~ "Unknown"
+    ),
+    diet_treatment = case_when(
+      str_detect(treatment, "Sucrose") ~ "sucrose",
+      str_detect(treatment, "Only") ~ "vehicle",
+      TRUE ~ "Unknown"
+    ),
+    # Ensure the treatments are ordered correctly for the plot layout.
+    antibiotic_treatment = factor(antibiotic_treatment, levels = c("PBS", "biapenem")),
+    diet_treatment = factor(diet_treatment, levels = c("vehicle", "sucrose"))
+  ) %>%
+  # Create a single grouping variable for the x-axis by combining the treatment and day information.
+  mutate(
+    plot_group = paste(antibiotic_treatment, diet_treatment, day, sep = "_"),
+    # Create a unique ID for each mouse's trajectory within its specific treatment group.
+    trajectory_group = paste(antibiotic_treatment, diet_treatment, mouse_identifier, sep = "_")
+  ) %>%
+  # Convert the new grouping variable to a factor and set the levels to enforce the desired plot order.
+  mutate(
+    plot_group = factor(plot_group, levels = c(
+      "PBS_vehicle_0", "PBS_vehicle_3", "PBS_vehicle_6",
+      "PBS_sucrose_0", "PBS_sucrose_3", "PBS_sucrose_6",
+      "biapenem_vehicle_0", "biapenem_vehicle_3", "biapenem_vehicle_6",
+      "biapenem_sucrose_0", "biapenem_sucrose_3", "biapenem_sucrose_6"
+    ))
+  )
+```
+
+
+```{r}
+# --- Plotting ---
+# Generate the plot using ggplot2
+ggplot(processed_data, aes(x = plot_group, y = cf_us_per_gram_stool, fill = diet_treatment)) +
+  
+  # Add vertical lines to visually separate the main treatment blocks.
+  geom_vline(xintercept = c(3.5, 6.5, 9.5), color = "gray80", linetype = "dashed") +
+
+  # Add boxplots. The fill color is mapped to the diet treatment.
+  # Outliers are not plotted here as geom_jitter will show all individual points.
+  geom_boxplot(outlier.shape = NA, alpha = 0.8) +
+  
+   # Add thin lines to track the trajectory of each individual mouse.
+  geom_line(aes(group = trajectory_group), color = "gray50", linewidth = 0.5, alpha = 0.7) +
+  
+  # Add individual data points with some horizontal jitter to prevent overlap.
+  geom_point(aes(color = diet_treatment), width = 0.2, size = 2) +
+  
+  # Use a logarithmic scale for the y-axis, which is essential for this type of CFU data.
+  # We customize the labels to show scientific notation (10^2, 10^3, etc.).
+  scale_y_log10(
+    breaks = scales::trans_breaks("log10", function(x) 10^x, n = 9),
+    labels = scales::trans_format("log10", scales::math_format(10^.x))
+  ) +
+  
+  # Set the x-axis tick labels to show the day for each group.
+  scale_x_discrete(labels = rep(c("0", "3", "6"), 4)) +
+  
+  # Manually set the colors to match the publication figure (gray for vehicle, pink for sucrose).
+  scale_fill_manual(values = c("vehicle" = "gray", "sucrose" = "#FF69B4")) +
+  scale_color_manual(values = c("vehicle" = "gray40", "sucrose" = "red")) +
+  
+  # Add labels for the axes and title.
+  labs(
+    y = "Enterococcal\nCFU/gram",
+    x = "Treatment Group",
+    title = "RB08"
+  ) +
+  
+  # Add annotations below the x-axis to label the main groups.
+  annotate("text", x = 2, y = 0.1, label = "PBS\nvehicle", size = 3.5) +
+  annotate("text", x = 5, y = 0.1, label = "PBS\nsucrose", size = 3.5) +
+  annotate("text", x = 8, y = 0.1, label = "Biapenem\nvehicle", size = 3.5) +
+  annotate("text", x = 11, y = 0.1, label = "Biapenem\nsucrose", size = 3.5) +
+  
+  # Apply a clean, classic theme suitable for publication.
+  theme_classic() +
+  
+  # Further theme adjustments for a polished look.
+  theme(
+    axis.title = element_text(size = 12),
+    axis.text.x = element_text(size = 10, vjust = -1), # Adjust position of day numbers
+    axis.text.y = element_text(size = 10),
+    plot.title = element_text(hjust = 0.5, size = 14, face = "bold"),
+    legend.position = "none" # Hide the legend as the colors are explained by the fill.
+  ) +
+  # Extend the plot margin to make room for the annotations.
+  coord_cartesian( clip = "off")
+
+
+```
+
+# weight data 
+
+```{r}
+weights <- readxl::read_excel('../data/7_9_25 weights_biapenem_rebuttal_experiment.xlsx')
 ```
 
